--- a/examples/course/sco1221/pages/6611/page.pug
+++ b/examples/course/sco1221/pages/6611/page.pug
@@ -1,3 +1,5 @@
 div
     h1 Youtube
-    div(data-hz-resource="HzVideo", data-type="youtube" data-video-id="C0DPdy98e4c", data-opt-hz-video-optional="true")
+    div.plyr__video-embed(data-hz-resource="HzVideo")
+        iframe(src="https://www.youtube.com/embed/bTqVqk7FSmY?origin=https://plyr.io&amp;iv_load_policy=3&amp;modestbranding=1&amp;playsinline=1&amp;showinfo=0&amp;rel=0&amp;enablejsapi=1" allowfullscreen allowtransparency allow="autoplay")
+
