Implemented endOffset option

--- a/examples/course/sco1221/pages/6612/page.pug
+++ b/examples/course/sco1221/pages/6612/page.pug
@@ -1,4 +1,4 @@
 div
     h1 HTML5 Video
-    video(data-hz-resource="HzVideo",controls)
+    video(data-hz-resource="HzVideo", data-opt-hz-video-end-offset="-2",controls)
         source(src='./pages/6612/assets/videos/sample.mp4', type='video/mp4')
